SDKs/twilio.com/api/1.37.4/java/USAGE.md
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            SDK sdk = builder.build();

            CreateAccountRequest req = new CreateAccountRequest() {{
                security = new CreateAccountSecurity() {{
                    accountSidAuthToken = new SchemeAccountSidAuthToken() {{
                        password = "YOUR_PASSWORD_HERE";
                        username = "YOUR_USERNAME_HERE";
                    }};
                }};
                request = new CreateAccountCreateAccountRequest() {{
                    friendlyName = "recusandae";
                }};
            }};

            CreateAccountResponse res = sdk.createAccount(req);

            if (res.apiV2010Account.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->